# AdvisorBot

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h
AdvisorBot/: advisorBot.cpp  advisorBot.h  commands.cpp  commands.h  parser.cpp  parser.h
